Add new NixOS live cd ISO

--- a/dotfiles/.config/helix/config.toml
+++ b/dotfiles/.config/helix/config.toml
@@ -5,6 +5,7 @@ theme = "catppuccin_mocha"
 # highlight the line the cursor is at
 cursorline = true
 completion-trigger-len = 3
+mouse = false
 
 [editor.statusline]
 left = ["mode", "spinner"]
